// Package query æä¾›èµ„æºå®ä¾‹æŸ¥è¯¢æœåŠ¡çš„æµ‹è¯•
//
// ğŸ§ª **æµ‹è¯•æ–‡ä»¶**
//
// æœ¬æ–‡ä»¶æµ‹è¯•èµ„æºå®ä¾‹æŸ¥è¯¢çš„æ ¸å¿ƒåŠŸèƒ½ï¼Œé‡ç‚¹æµ‹è¯•å¤šå®ä¾‹åœºæ™¯ï¼š
// - æŒ‰å®ä¾‹ç²¾ç¡®æŸ¥è¯¢
// - åˆ—å‡ºä»£ç çš„æ‰€æœ‰å®ä¾‹
// - å®ä¾‹ç»Ÿè®¡æŸ¥è¯¢
//
// âš ï¸ **æ ‡è¯†åè®®å¯¹é½**ï¼ˆå‚è€ƒ IDENTIFIER_AND_NAMESPACE_PROTOCOL_SPEC.mdï¼‰ï¼š
// - æµ‹è¯• ResourceInstanceIdï¼ˆOutPointï¼‰ä½œä¸ºä¸»é”®çš„æŸ¥è¯¢
// - æµ‹è¯• ResourceCodeId â†’ ResourceInstanceId çš„ 1:N å…³ç³»
package query

import (
	"context"
	"encoding/json"
	"fmt"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	"github.com/weisyn/v1/internal/core/eutxo/testutil"
	"github.com/weisyn/v1/pkg/interfaces/eutxo"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	pbresource "github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
)

// ==================== æŒ‰å®ä¾‹æŸ¥è¯¢æµ‹è¯• ====================

// TestGetResourceUTXOByInstance_WithExistingInstance_ReturnsRecord æµ‹è¯•æŸ¥è¯¢å­˜åœ¨çš„å®ä¾‹
func TestGetResourceUTXOByInstance_WithExistingInstance_ReturnsRecord(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()

	// åˆ›å»ºèµ„æº UTXOï¼ˆæ¨¡æ‹Ÿéƒ¨ç½²ï¼‰
	contentHash := testutil.RandomBytes(32) // 32å­—èŠ‚å†…å®¹å“ˆå¸Œ
	txHash := testutil.RandomTxID()
	outputIndex := uint32(0)

	// åˆ›å»º ResourceOutput
	resourceOutput := &transaction.ResourceOutput{
		Resource: &pbresource.Resource{
			ContentHash: contentHash,
			Category:    pbresource.ResourceCategory_RESOURCE_CATEGORY_EXECUTABLE,
		},
		CreationTimestamp: 1000,
		IsImmutable:        false,
	}

	// åˆ›å»º TxOutput
	txOutput := &transaction.TxOutput{
		Owner: testutil.RandomAddress(),
		OutputContent: &transaction.TxOutput_Resource{
			Resource: resourceOutput,
		},
	}

	// å†™å…¥èµ„æºç´¢å¼•ï¼ˆä½¿ç”¨ writer çš„å†…éƒ¨æ–¹æ³•ï¼‰
	blockHash := testutil.RandomBytes(32) // 32å­—èŠ‚åŒºå—å“ˆå¸Œ
	blockHeight := uint64(1)

	// ç›´æ¥å†™å…¥ç´¢å¼•ï¼ˆæ¨¡æ‹Ÿ writer çš„è¡Œä¸ºï¼‰
	record := &eutxo.ResourceUTXORecord{
		ContentHash:       contentHash,
		TxId:              txHash,
		OutputIndex:       outputIndex,
		Owner:             txOutput.Owner,
		Status:            eutxo.ResourceUTXOStatusActive,
		CreationTimestamp: resourceOutput.CreationTimestamp,
		IsImmutable:       resourceOutput.IsImmutable,
	}

	instanceID := eutxo.EncodeInstanceID(txHash, outputIndex)
	instanceRecordKey := fmt.Sprintf("resource:utxo-instance:%s", instanceID)
	recordData, err := json.Marshal(record)
	require.NoError(t, err)
	err = storage.Set(ctx, []byte(instanceRecordKey), recordData)
	require.NoError(t, err)

	// å†™å…¥å®ä¾‹ç´¢å¼•
	instanceIndexKey := fmt.Sprintf("indices:resource-instance:%s", instanceID)
	instanceIndexValue := make([]byte, 72) // blockHash(32) + blockHeight(8) + contentHash(32)
	copy(instanceIndexValue[0:32], blockHash)
	copy(instanceIndexValue[32:40], uint64ToBytes(blockHeight))
	copy(instanceIndexValue[40:72], contentHash)
	err = storage.Set(ctx, []byte(instanceIndexKey), instanceIndexValue)
	require.NoError(t, err)

	// å†™å…¥ä»£ç â†’å®ä¾‹ç´¢å¼•
	codeIndexKey := fmt.Sprintf("indices:resource-code:%x", contentHash)
	instanceList := []string{instanceID}
	codeIndexValue, err := json.Marshal(instanceList)
	require.NoError(t, err)
	err = storage.Set(ctx, []byte(codeIndexKey), codeIndexValue)
	require.NoError(t, err)

	// åˆ›å»ºæŸ¥è¯¢æœåŠ¡
	queryService, err := NewResourceService(storage, nil)
	require.NoError(t, err)

	// Act
	retrieved, exists, err := queryService.GetResourceUTXOByInstance(ctx, txHash, outputIndex)

	// Assert
	assert.NoError(t, err)
	assert.True(t, exists)
	assert.NotNil(t, retrieved)
	assert.Equal(t, contentHash, retrieved.ContentHash)
	assert.Equal(t, txHash, retrieved.TxId)
	assert.Equal(t, outputIndex, retrieved.OutputIndex)
	assert.Equal(t, txOutput.Owner, retrieved.Owner)
}

// TestGetResourceUTXOByInstance_WithNonExistentInstance_ReturnsFalse æµ‹è¯•æŸ¥è¯¢ä¸å­˜åœ¨çš„å®ä¾‹
func TestGetResourceUTXOByInstance_WithNonExistentInstance_ReturnsFalse(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	queryService, err := NewResourceService(storage, nil)
	require.NoError(t, err)

	txHash := testutil.RandomTxID()
	outputIndex := uint32(999)

	// Act
	retrieved, exists, err := queryService.GetResourceUTXOByInstance(ctx, txHash, outputIndex)

	// Assert
	assert.NoError(t, err)
	assert.False(t, exists)
	assert.Nil(t, retrieved)
}

// TestGetResourceUTXOByInstance_WithInvalidTxHash_ReturnsError æµ‹è¯•ä½¿ç”¨æ— æ•ˆçš„äº¤æ˜“å“ˆå¸ŒæŸ¥è¯¢
func TestGetResourceUTXOByInstance_WithInvalidTxHash_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	queryService, err := NewResourceService(storage, nil)
	require.NoError(t, err)

	invalidTxHash := []byte{1, 2, 3} // ä¸æ˜¯32å­—èŠ‚
	outputIndex := uint32(0)

	// Act
	retrieved, exists, err := queryService.GetResourceUTXOByInstance(ctx, invalidTxHash, outputIndex)

	// Assert
	assert.Error(t, err)
	assert.False(t, exists)
	assert.Nil(t, retrieved)
	assert.Contains(t, err.Error(), "txHash å¿…é¡»æ˜¯ 32 å­—èŠ‚")
}

// ==================== åˆ—å‡ºä»£ç çš„æ‰€æœ‰å®ä¾‹æµ‹è¯• ====================

// TestListResourceInstancesByCode_WithMultipleInstances_ReturnsAllInstances æµ‹è¯•åˆ—å‡ºä»£ç çš„æ‰€æœ‰å®ä¾‹ï¼ˆå¤šå®ä¾‹åœºæ™¯ï¼‰
func TestListResourceInstancesByCode_WithMultipleInstances_ReturnsAllInstances(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()

	// åŒä¸€ä¸ªä»£ç çš„å¤šä¸ªå®ä¾‹
	contentHash := testutil.RandomBytes(32) // 32å­—èŠ‚å†…å®¹å“ˆå¸Œ
	owner1 := testutil.RandomAddress()
	owner2 := testutil.RandomAddress()

	// å®ä¾‹1
	txHash1 := testutil.RandomTxID()
	outputIndex1 := uint32(0)
	instanceID1 := eutxo.EncodeInstanceID(txHash1, outputIndex1)
	record1 := &eutxo.ResourceUTXORecord{
		ContentHash:       contentHash,
		TxId:              txHash1,
		OutputIndex:       outputIndex1,
		Owner:             owner1,
		Status:            eutxo.ResourceUTXOStatusActive,
		CreationTimestamp: 1000,
		IsImmutable:       false,
	}

	// å®ä¾‹2
	txHash2 := testutil.RandomTxID()
	outputIndex2 := uint32(0)
	instanceID2 := eutxo.EncodeInstanceID(txHash2, outputIndex2)
	record2 := &eutxo.ResourceUTXORecord{
		ContentHash:       contentHash,
		TxId:              txHash2,
		OutputIndex:       outputIndex2,
		Owner:             owner2,
		Status:            eutxo.ResourceUTXOStatusActive,
		CreationTimestamp: 2000,
		IsImmutable:       false,
	}

	// å†™å…¥å®ä¾‹è®°å½•
	instanceRecordKey1 := fmt.Sprintf("resource:utxo-instance:%s", instanceID1)
	recordData1, _ := json.Marshal(record1)
	storage.Set(ctx, []byte(instanceRecordKey1), recordData1)

	instanceRecordKey2 := fmt.Sprintf("resource:utxo-instance:%s", instanceID2)
	recordData2, _ := json.Marshal(record2)
	storage.Set(ctx, []byte(instanceRecordKey2), recordData2)

	// å†™å…¥ä»£ç â†’å®ä¾‹ç´¢å¼•
	codeIndexKey := fmt.Sprintf("indices:resource-code:%x", contentHash)
	instanceList := []string{instanceID1, instanceID2}
	codeIndexValue, _ := json.Marshal(instanceList)
	storage.Set(ctx, []byte(codeIndexKey), codeIndexValue)

	// åˆ›å»ºæŸ¥è¯¢æœåŠ¡
	queryService, err := NewResourceService(storage, nil)
	require.NoError(t, err)

	// Act
	instances, err := queryService.ListResourceInstancesByCode(ctx, contentHash)

	// Assert
	assert.NoError(t, err)
	assert.NotNil(t, instances)
	assert.Equal(t, 2, len(instances), "åº”è¯¥è¿”å›2ä¸ªå®ä¾‹")

	// éªŒè¯å®ä¾‹1
	found1 := false
	for _, inst := range instances {
		if inst.TxId != nil && len(inst.TxId) == 32 {
			if string(inst.TxId) == string(txHash1) && inst.OutputIndex == outputIndex1 {
				assert.Equal(t, owner1, inst.Owner)
				found1 = true
				break
			}
		}
	}
	assert.True(t, found1, "åº”è¯¥æ‰¾åˆ°å®ä¾‹1")

	// éªŒè¯å®ä¾‹2
	found2 := false
	for _, inst := range instances {
		if inst.TxId != nil && len(inst.TxId) == 32 {
			if string(inst.TxId) == string(txHash2) && inst.OutputIndex == outputIndex2 {
				assert.Equal(t, owner2, inst.Owner)
				found2 = true
				break
			}
		}
	}
	assert.True(t, found2, "åº”è¯¥æ‰¾åˆ°å®ä¾‹2")
}

// TestListResourceInstancesByCode_WithNoInstances_ReturnsEmptyList æµ‹è¯•åˆ—å‡ºæ²¡æœ‰å®ä¾‹çš„ä»£ç 
func TestListResourceInstancesByCode_WithNoInstances_ReturnsEmptyList(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	queryService, err := NewResourceService(storage, nil)
	require.NoError(t, err)

	contentHash := testutil.RandomBytes(32) // 32å­—èŠ‚å†…å®¹å“ˆå¸Œ

	// Act
	instances, err := queryService.ListResourceInstancesByCode(ctx, contentHash)

	// Assert
	assert.NoError(t, err)
	assert.NotNil(t, instances)
	assert.Equal(t, 0, len(instances), "åº”è¯¥è¿”å›ç©ºåˆ—è¡¨")
}

// TestListResourceInstancesByCode_WithInvalidContentHash_ReturnsError æµ‹è¯•ä½¿ç”¨æ— æ•ˆçš„å†…å®¹å“ˆå¸Œ
func TestListResourceInstancesByCode_WithInvalidContentHash_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	queryService, err := NewResourceService(storage, nil)
	require.NoError(t, err)

	invalidContentHash := []byte{1, 2, 3} // ä¸æ˜¯32å­—èŠ‚

	// Act
	instances, err := queryService.ListResourceInstancesByCode(ctx, invalidContentHash)

	// Assert
	assert.Error(t, err)
	assert.Nil(t, instances)
	assert.Contains(t, err.Error(), "contentHash å¿…é¡»æ˜¯ 32 å­—èŠ‚")
}

// ==================== å®ä¾‹ç»Ÿè®¡æŸ¥è¯¢æµ‹è¯• ====================

// TestGetResourceUsageCountersByInstance_WithExistingInstance_ReturnsCounters æµ‹è¯•æŸ¥è¯¢å­˜åœ¨çš„å®ä¾‹ç»Ÿè®¡
func TestGetResourceUsageCountersByInstance_WithExistingInstance_ReturnsCounters(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()

	txHash := testutil.RandomTxID()
	outputIndex := uint32(0)
	contentHash := testutil.RandomBytes(32) // 32å­—èŠ‚å†…å®¹å“ˆå¸Œ
	instanceID := eutxo.EncodeInstanceID(txHash, outputIndex)

	// å†™å…¥å®ä¾‹ç»Ÿè®¡
	counters := &eutxo.ResourceUsageCounters{
		InstanceTxId:            txHash,
		InstanceIndex:           outputIndex,
		ContentHash:             contentHash,
		CurrentReferenceCount:   5,
		TotalReferenceTimes:     10,
		LastReferenceBlockHeight: 100,
		LastReferenceTimestamp:   2000,
	}

	countersKey := fmt.Sprintf("resource:counters-instance:%s", instanceID)
	countersData, _ := json.Marshal(counters)
	storage.Set(ctx, []byte(countersKey), countersData)

	// åˆ›å»ºæŸ¥è¯¢æœåŠ¡
	queryService, err := NewResourceService(storage, nil)
	require.NoError(t, err)

	// Act
	retrieved, exists, err := queryService.GetResourceUsageCountersByInstance(ctx, txHash, outputIndex)

	// Assert
	assert.NoError(t, err)
	assert.True(t, exists)
	assert.NotNil(t, retrieved)
	assert.Equal(t, txHash, retrieved.InstanceTxId)
	assert.Equal(t, outputIndex, retrieved.InstanceIndex)
	assert.Equal(t, contentHash, retrieved.ContentHash)
	assert.Equal(t, uint64(5), retrieved.CurrentReferenceCount)
	assert.Equal(t, uint64(10), retrieved.TotalReferenceTimes)
}

// TestGetResourceUsageCountersByInstance_WithNonExistentInstance_ReturnsDefault æµ‹è¯•æŸ¥è¯¢ä¸å­˜åœ¨çš„å®ä¾‹ç»Ÿè®¡
func TestGetResourceUsageCountersByInstance_WithNonExistentInstance_ReturnsDefault(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	queryService, err := NewResourceService(storage, nil)
	require.NoError(t, err)

	txHash := testutil.RandomTxID()
	outputIndex := uint32(999)

	// Act
	retrieved, exists, err := queryService.GetResourceUsageCountersByInstance(ctx, txHash, outputIndex)

	// Assert
	assert.NoError(t, err)
	assert.False(t, exists)
	assert.NotNil(t, retrieved)
	assert.Equal(t, txHash, retrieved.InstanceTxId)
	assert.Equal(t, outputIndex, retrieved.InstanceIndex)
	assert.Equal(t, uint64(0), retrieved.CurrentReferenceCount)
	assert.Equal(t, uint64(0), retrieved.TotalReferenceTimes)
}

// ==================== è¾…åŠ©å‡½æ•° ====================

// uint64ToBytes å°† uint64 è½¬æ¢ä¸ºå­—èŠ‚æ•°ç»„ï¼ˆBigEndianï¼‰
func uint64ToBytes(n uint64) []byte {
	b := make([]byte, 8)
	b[0] = byte(n >> 56)
	b[1] = byte(n >> 48)
	b[2] = byte(n >> 40)
	b[3] = byte(n >> 32)
	b[4] = byte(n >> 24)
	b[5] = byte(n >> 16)
	b[6] = byte(n >> 8)
	b[7] = byte(n)
	return b
}

