// Package resource å®ç°èµ„æºæŸ¥è¯¢æœåŠ¡
package resource

import (
	"context"
	"encoding/hex"
	"encoding/json"
	"fmt"
	"path/filepath"
	"strings"

	"github.com/weisyn/v1/internal/core/persistence/query/interfaces"
	pb_resource "github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
)

// Service èµ„æºæŸ¥è¯¢æœåŠ¡
type Service struct {
	storage     storage.BadgerStore
	fileStore   storage.FileStore
	txQuery     interfaces.InternalTxQuery
	resourceDir string
	logger      log.Logger
}

// NewService åˆ›å»ºèµ„æºæŸ¥è¯¢æœåŠ¡ï¼ˆP3-19ï¼šä»é…ç½®è·å–èµ„æºç›®å½•ï¼‰
func NewService(badgerStore storage.BadgerStore, fileStore storage.FileStore, txQuery interfaces.InternalTxQuery, logger log.Logger) (interfaces.InternalResourceQuery, error) {
	if badgerStore == nil {
		return nil, fmt.Errorf("badgerStore ä¸èƒ½ä¸ºç©º")
	}
	if fileStore == nil {
		return nil, fmt.Errorf("fileStore ä¸èƒ½ä¸ºç©º")
	}
	if txQuery == nil {
		return nil, fmt.Errorf("txQuery ä¸èƒ½ä¸ºç©º")
	}

	// âš ï¸ **æ³¨æ„**ï¼šresourceDir å·²ä¸å†ä½¿ç”¨
	// FileStore çš„æ ¹ç›®å½•ç”± FileStore é…ç½®å†³å®šï¼ˆåœ¨èŠ‚ç‚¹åœºæ™¯ä¸‹é€šå¸¸ä¸º {instance_data_dir}/filesï¼‰
	// BuildFilePath() ç°åœ¨è¿”å›ç›¸å¯¹è·¯å¾„ï¼Œä¸ CASStorage ä¿æŒä¸€è‡´
	// ä¿ç•™ resourceDir å­—æ®µä»¥é¿å…ç ´åç°æœ‰ä»£ç ï¼Œä½†ä¸å†ä½¿ç”¨
	resourceDir := "" // ä¸å†ä½¿ç”¨ï¼Œä¿ç•™å­—æ®µä»¥å…¼å®¹

	s := &Service{
		storage:     badgerStore,
		fileStore:   fileStore,
		txQuery:     txQuery,
		resourceDir: resourceDir,
		logger:      logger,
	}

	if logger != nil {
		logger.Info("âœ… ResourceQuery æœåŠ¡å·²åˆ›å»º")
	}

	return s, nil
}

// GetResourceByContentHash æ ¹æ®å†…å®¹å“ˆå¸ŒæŸ¥è¯¢å®Œæ•´èµ„æº
func (s *Service) GetResourceByContentHash(ctx context.Context, contentHash []byte) (*pb_resource.Resource, error) {
	// ä»åŒºå—é“¾å­˜å‚¨è·å–èµ„æºå…ƒä¿¡æ¯
	resource, exists, err := s.GetResourceFromBlockchain(ctx, contentHash)
	if err != nil {
		return nil, err
	}

	if !exists {
		return nil, fmt.Errorf("èµ„æºä¸å­˜åœ¨: %x", contentHash)
	}

	return resource, nil
}

// GetResourceByInstance æ ¹æ®èµ„æºå®ä¾‹æ ‡è¯†è·å–èµ„æº
//
// å®ç° interfaces.InternalResourceQuery.GetResourceByInstance
func (s *Service) GetResourceByInstance(ctx context.Context, txHash []byte, outputIndex uint32) (*pb_resource.Resource, bool, error) {
	if len(txHash) != 32 {
		return nil, false, fmt.Errorf("txHash å¿…é¡»æ˜¯ 32 å­—èŠ‚ï¼Œå®é™…: %d", len(txHash))
	}

	// é€šè¿‡ TxQuery è·å–äº¤æ˜“
	blockHash, _, tx, err := s.txQuery.GetTransaction(ctx, txHash)
	if err != nil || tx == nil {
		return nil, false, fmt.Errorf("è·å–äº¤æ˜“å¤±è´¥: %w", err)
	}

	// è¾¹ç•Œæ£€æŸ¥
	if int(outputIndex) >= len(tx.Outputs) {
		return nil, false, nil
	}

	output := tx.Outputs[outputIndex]
	if output == nil {
		return nil, false, nil
	}

	resourceOutput := output.GetResource()
	if resourceOutput == nil || resourceOutput.Resource == nil {
		return nil, false, nil
	}

	if s.logger != nil {
		s.logger.Infof("âœ… é€šè¿‡å®ä¾‹æŸ¥è¯¢èµ„æºæˆåŠŸ, txHash=%x, blockHash=%x, outputIndex=%d",
			txHash, blockHash, outputIndex)
	}

	return resourceOutput.Resource, true, nil
}

// GetResourceFromBlockchain ä»åŒºå—é“¾è·å–èµ„æºå…ƒä¿¡æ¯
//
// ğŸ¯ **æ­£ç¡®çš„æŸ¥è¯¢æµç¨‹**ï¼ˆéµå¾ª data-architecture.md è§„èŒƒï¼‰ï¼š
// 1. é€šè¿‡ indices:resource:{contentHash} æ‰¾åˆ° txHash
// 2. é€šè¿‡ txHash æŸ¥è¯¢äº¤æ˜“
// 3. ä»äº¤æ˜“çš„ ResourceOutput ä¸­æå– Resource
//
// âš ï¸ **é‡è¦**ï¼šèµ„æºå…ƒæ•°æ®å­˜å‚¨åœ¨äº¤æ˜“/åŒºå—ä¸­ï¼Œä¸åº”å­˜å‚¨åœ¨ BadgerDB çš„ resource:meta: é”®ä¸‹
func (s *Service) GetResourceFromBlockchain(ctx context.Context, contentHash []byte) (*pb_resource.Resource, bool, error) {
	// 1. è·å–èµ„æºå…³è”çš„äº¤æ˜“ä¿¡æ¯
	txHash, _, _, err := s.GetResourceTransaction(ctx, contentHash)
	if err != nil {
		// èµ„æºç´¢å¼•ä¸å­˜åœ¨ï¼Œè¯´æ˜èµ„æºä¸å­˜åœ¨
		return nil, false, nil
	}

	// 2. é€šè¿‡äº¤æ˜“å“ˆå¸ŒæŸ¥è¯¢å®Œæ•´äº¤æ˜“
	_, _, tx, err := s.txQuery.GetTransaction(ctx, txHash)
	if err != nil {
		return nil, false, fmt.Errorf("è·å–äº¤æ˜“å¤±è´¥: %w", err)
	}

	// 3. ä»äº¤æ˜“è¾“å‡ºä¸­æŸ¥æ‰¾åŒ¹é…çš„ ResourceOutput
	for _, output := range tx.Outputs {
		if output == nil {
			continue
		}

		// æ£€æŸ¥æ˜¯å¦æ˜¯ ResourceOutput
		resourceOutput := output.GetResource()
		if resourceOutput == nil {
			continue
		}

		// æ£€æŸ¥ Resource æ˜¯å¦å­˜åœ¨
		if resourceOutput.Resource == nil {
			continue
		}

		// åŒ¹é… contentHash
		if len(resourceOutput.Resource.ContentHash) == len(contentHash) {
			match := true
			for i := 0; i < len(contentHash); i++ {
				if resourceOutput.Resource.ContentHash[i] != contentHash[i] {
					match = false
					break
				}
			}
			if match {
				// ğŸ” è°ƒè¯•æ—¥å¿—ï¼šæ£€æŸ¥ä»äº¤æ˜“ä¸­æå–çš„ Resource æ˜¯å¦æœ‰ ExecutionConfig
				resource := resourceOutput.Resource
				if resource.ExecutionConfig != nil {
					if contract, ok := resource.ExecutionConfig.(*pb_resource.Resource_Contract); ok && contract.Contract != nil {
						if s.logger != nil {
							s.logger.Infof("ğŸ” [DEBUG] GetResourceFromBlockchain: æ‰¾åˆ° Resourceï¼ŒExecutionConfig å­˜åœ¨ (abi_version=%s, functions=%d)",
								contract.Contract.AbiVersion, len(contract.Contract.ExportedFunctions))
						}
					} else {
						if s.logger != nil {
							s.logger.Warnf("ğŸ” [DEBUG] GetResourceFromBlockchain: ExecutionConfig ç±»å‹ä¸åŒ¹é…æˆ–ä¸ºç©º")
						}
					}
				} else {
					if s.logger != nil {
						s.logger.Warnf("ğŸ” [DEBUG] GetResourceFromBlockchain: Resource.ExecutionConfig ä¸º nil (contentHash=%x)", contentHash)
					}
				}
				// æ‰¾åˆ°åŒ¹é…çš„ Resourceï¼Œè¿”å›
				return resourceOutput.Resource, true, nil
			}
		}
	}

	// 4. æœªæ‰¾åˆ°åŒ¹é…çš„ ResourceOutput
	return nil, false, nil
}

// GetResourceTransaction è·å–èµ„æºå…³è”çš„äº¤æ˜“ä¿¡æ¯
func (s *Service) GetResourceTransaction(ctx context.Context, contentHash []byte) (txHash, blockHash []byte, blockHeight uint64, err error) {
	// âš ï¸ Phase 4ï¼šä½¿ç”¨ä»£ç â†’å®ä¾‹ç´¢å¼• + äº¤æ˜“æŸ¥è¯¢ï¼Œä¸å†ä¾èµ–æ—§çš„ indices:resource:{contentHash}
	if len(contentHash) != 32 {
		return nil, nil, 0, fmt.Errorf("contentHash å¿…é¡»æ˜¯ 32 å­—èŠ‚ï¼Œå®é™…: %d", len(contentHash))
	}

	// 1. ä»ä»£ç â†’å®ä¾‹ç´¢å¼•è·å–ç¬¬ä¸€ä¸ªå®ä¾‹
	codeIndexKey := []byte(fmt.Sprintf("indices:resource-code:%x", contentHash))
	data, err := s.storage.Get(ctx, codeIndexKey)
	if err != nil || len(data) == 0 {
		return nil, nil, 0, fmt.Errorf("èµ„æºäº¤æ˜“ä¿¡æ¯ä¸å­˜åœ¨: contentHash=%x", contentHash)
	}

	var instanceList []string
	if err := json.Unmarshal(data, &instanceList); err != nil || len(instanceList) == 0 {
		return nil, nil, 0, fmt.Errorf("è§£æèµ„æºå®ä¾‹ç´¢å¼•å¤±è´¥: %w", err)
	}

	instanceIDStr := instanceList[0]
	parts := strings.Split(instanceIDStr, ":")
	if len(parts) != 2 {
		return nil, nil, 0, fmt.Errorf("æ— æ•ˆçš„å®ä¾‹IDæ ¼å¼: %s", instanceIDStr)
	}

	txHashBytes, err := hex.DecodeString(parts[0])
	if err != nil || len(txHashBytes) != 32 {
		return nil, nil, 0, fmt.Errorf("æ— æ•ˆçš„å®ä¾‹IDä¸­çš„ txHash: %s", parts[0])
	}
	txHash = txHashBytes

	// 2. é€šè¿‡ TxQuery è·å–åŒºå—å“ˆå¸Œå’Œé«˜åº¦
	blockHash, _, _, err = s.txQuery.GetTransaction(ctx, txHash)
	if err != nil {
		return nil, nil, 0, fmt.Errorf("è·å–äº¤æ˜“å¤±è´¥: %w", err)
	}

	blockHeight, err = s.txQuery.GetTxBlockHeight(ctx, txHash)
	if err != nil {
		return nil, nil, 0, fmt.Errorf("è·å–äº¤æ˜“åŒºå—é«˜åº¦å¤±è´¥: %w", err)
	}

	if s.logger != nil {
		s.logger.Infof("âœ… èµ„æºäº¤æ˜“æŸ¥è¯¢æˆåŠŸï¼ŒtxHash=%x, blockHash=%x, blockHeight=%d",
			txHash, blockHash, blockHeight)
	}

	return txHash, blockHash, blockHeight, nil
}

// ListResourceInstancesByCode åˆ—å‡ºæŒ‡å®šä»£ç çš„æ‰€æœ‰å®ä¾‹ OutPoint
//
// å®ç° interfaces.InternalResourceQuery.ListResourceInstancesByCode
func (s *Service) ListResourceInstancesByCode(ctx context.Context, contentHash []byte) ([]*transaction.OutPoint, error) {
	if len(contentHash) != 32 {
		return nil, fmt.Errorf("contentHash å¿…é¡»æ˜¯ 32 å­—èŠ‚ï¼Œå®é™…: %d", len(contentHash))
	}

	codeIndexKey := []byte(fmt.Sprintf("indices:resource-code:%x", contentHash))
	data, err := s.storage.Get(ctx, codeIndexKey)
	if err != nil || len(data) == 0 {
		// ç´¢å¼•ä¸å­˜åœ¨åˆ™è¿”å›ç©ºåˆ—è¡¨
		return []*transaction.OutPoint{}, nil
	}

	var instanceList []string
	if err := json.Unmarshal(data, &instanceList); err != nil {
		return nil, fmt.Errorf("è§£æèµ„æºå®ä¾‹ç´¢å¼•å¤±è´¥: %w", err)
	}

	outpoints := make([]*transaction.OutPoint, 0, len(instanceList))
	for _, instanceIDStr := range instanceList {
		parts := strings.Split(instanceIDStr, ":")
		if len(parts) != 2 {
			if s.logger != nil {
				s.logger.Warnf("æ— æ•ˆçš„å®ä¾‹IDæ ¼å¼, è·³è¿‡: %s", instanceIDStr)
			}
			continue
		}

		txHashBytes, err := hex.DecodeString(parts[0])
		if err != nil || len(txHashBytes) != 32 {
			if s.logger != nil {
				s.logger.Warnf("è§£æå®ä¾‹IDä¸­çš„ txHash å¤±è´¥, è·³è¿‡: %s", parts[0])
			}
			continue
		}

		// outputIndex å½“å‰ç¼–ç ä¸ºåè¿›åˆ¶å­—ç¬¦ä¸²
		var outputIndex uint32
		_, err = fmt.Sscanf(parts[1], "%d", &outputIndex)
		if err != nil {
			if s.logger != nil {
				s.logger.Warnf("è§£æå®ä¾‹IDä¸­çš„ outputIndex å¤±è´¥, è·³è¿‡: %s", parts[1])
			}
			continue
		}

		outpoints = append(outpoints, &transaction.OutPoint{
			TxId:        txHashBytes,
			OutputIndex: outputIndex,
		})
	}

	return outpoints, nil
}

// CheckFileExists æ£€æŸ¥æœ¬åœ°æ–‡ä»¶æ˜¯å¦å­˜åœ¨
func (s *Service) CheckFileExists(contentHash []byte) bool {
	filePath := s.BuildFilePath(contentHash)
	ctx := context.Background()
	exists, err := s.fileStore.Exists(ctx, filePath)
	if err != nil {
		return false
	}
	return exists
}

// BuildFilePath æ„å»ºæœ¬åœ°æ–‡ä»¶è·¯å¾„
//
// ğŸ¯ **è·¯å¾„æ ¼å¼**ï¼ˆéµå¾ª data-architecture.md è§„èŒƒï¼‰ï¼š
// FileStore æ ¹ç›®å½•ï¼š./data/filesï¼ˆç”± FileStore é…ç½®å†³å®šï¼‰
// ç›¸å¯¹è·¯å¾„ï¼š{hash[0:2]}/{hash[2:4]}/{fullHash}
// å®Œæ•´è·¯å¾„ï¼š./data/files/{hash[0:2]}/{hash[2:4]}/{fullHash}
//
// âš ï¸ **æ³¨æ„**ï¼š
// - FileStore çš„æ ¹ç›®å½•å·²ç»æ˜¯ ./data/files
// - åªéœ€è¦è¿”å›ç›¸å¯¹è·¯å¾„ï¼š{hash[0:2]}/{hash[2:4]}/{fullHash}
// - ä¸ CASStorage.BuildFilePath() ä¿æŒä¸€è‡´
func (s *Service) BuildFilePath(contentHash []byte) string {
	hashStr := fmt.Sprintf("%x", contentHash)
	if len(hashStr) < 4 {
		// å“ˆå¸Œé•¿åº¦ä¸è¶³ï¼Œè¿”å›å“ˆå¸Œæœ¬èº«ï¼ˆå…œåº•å¤„ç†ï¼‰
		return hashStr
	}

	// åˆ†å±‚è·¯å¾„ï¼šhash[0:2]/hash[2:4]/fullHash
	// æ³¨æ„ï¼šä¸åŒ…å« "files/" å‰ç¼€ï¼Œå› ä¸º FileStore æ ¹ç›®å½•å·²ç»æ˜¯ ./data/files
	return filepath.Join(
		hashStr[0:2], // ä¸€çº§ç›®å½•ï¼ˆ256ç§å¯èƒ½ï¼‰
		hashStr[2:4], // äºŒçº§ç›®å½•ï¼ˆ256ç§å¯èƒ½ï¼‰
		hashStr,      // å®Œæ•´å“ˆå¸Œä½œä¸ºæ–‡ä»¶å
	)
}

// ListResourceHashes åˆ—å‡ºæ‰€æœ‰èµ„æºå“ˆå¸Œï¼ˆP3-20ï¼šèµ„æºå“ˆå¸Œåˆ—è¡¨æŸ¥è¯¢ï¼‰
//
// ğŸ¯ **å®ç°ç­–ç•¥ï¼ˆPhase 4ï¼‰**ï¼š
// 1. ä½¿ç”¨å‰ç¼€æ‰«æ `indices:resource-code:` è·å–æ‰€æœ‰èµ„æºç´¢å¼•é”®
// 2. ä»é”®ä¸­æå–å“ˆå¸Œï¼ˆé”®æ ¼å¼ï¼š`indices:resource-code:{contentHash}`ï¼‰
// 3. å®ç°åˆ†é¡µé€»è¾‘ï¼ˆoffset, limitï¼‰
// 4. è¿”å›å“ˆå¸Œåˆ—è¡¨
func (s *Service) ListResourceHashes(ctx context.Context, offset int, limit int) ([][]byte, error) {
	// éªŒè¯å‚æ•°
	if offset < 0 {
		offset = 0
	}
	if limit <= 0 {
		limit = 100 // é»˜è®¤é™åˆ¶100ä¸ª
	}
	if limit > 1000 {
		limit = 1000 // æœ€å¤§é™åˆ¶1000ä¸ª
	}

	// ä½¿ç”¨å‰ç¼€æ‰«æè·å–æ‰€æœ‰èµ„æºç´¢å¼•é”®
	// é”®æ ¼å¼ï¼šindices:resource-code:{contentHash}
	prefix := []byte("indices:resource-code:")
	results, err := s.storage.PrefixScan(ctx, prefix)
	if err != nil {
		return nil, fmt.Errorf("å‰ç¼€æ‰«æå¤±è´¥: %w", err)
	}

	// ä»é”®ä¸­æå–å“ˆå¸Œ
	hashes := make([][]byte, 0, len(results))
	prefixStr := "indices:resource-code:"

	for keyStr := range results {
		// æå–å“ˆå¸Œéƒ¨åˆ†ï¼ˆè·³è¿‡å‰ç¼€ï¼‰
		if len(keyStr) <= len(prefixStr) {
			continue
		}

		hashStr := keyStr[len(prefixStr):]
		// éªŒè¯å“ˆå¸Œæ ¼å¼ï¼ˆåº”è¯¥æ˜¯åå…­è¿›åˆ¶å­—ç¬¦ä¸²ï¼‰
		if len(hashStr) == 0 {
			continue
		}

		// å°†åå…­è¿›åˆ¶å­—ç¬¦ä¸²è½¬æ¢ä¸ºå­—èŠ‚æ•°ç»„
		hashBytes, err := hex.DecodeString(hashStr)
		if err != nil {
			// è§£ç å¤±è´¥ï¼Œè·³è¿‡æ­¤é”®
			if s.logger != nil {
				s.logger.Debugf("èµ„æºå“ˆå¸Œè§£ç å¤±è´¥ï¼Œè·³è¿‡: %s, error: %v", hashStr, err)
			}
			continue
		}

		hashes = append(hashes, hashBytes)
	}

	// åº”ç”¨åˆ†é¡µé€»è¾‘
	totalCount := len(hashes)
	if offset >= totalCount {
		// offsetè¶…å‡ºèŒƒå›´ï¼Œè¿”å›ç©ºåˆ—è¡¨
		if s.logger != nil {
			s.logger.Debugf("åˆ—å‡ºèµ„æºå“ˆå¸Œ: offset=%d >= total=%d, è¿”å›ç©ºåˆ—è¡¨", offset, totalCount)
		}
		return [][]byte{}, nil
	}

	// è®¡ç®—ç»“æŸä½ç½®
	end := offset + limit
	if end > totalCount {
		end = totalCount
	}

	// æå–åˆ†é¡µç»“æœ
	pagedHashes := hashes[offset:end]

	if s.logger != nil {
		s.logger.Debugf("åˆ—å‡ºèµ„æºå“ˆå¸Œ: offset=%d, limit=%d, total=%d, returned=%d",
			offset, limit, totalCount, len(pagedHashes))
	}

	return pagedHashes, nil
}

// bytesToUint64 å°†å­—èŠ‚æ•°ç»„è½¬æ¢ä¸ºuint64
func bytesToUint64(b []byte) uint64 {
	if len(b) != 8 {
		return 0
	}
	return uint64(b[0])<<56 | uint64(b[1])<<48 | uint64(b[2])<<40 | uint64(b[3])<<32 |
		uint64(b[4])<<24 | uint64(b[5])<<16 | uint64(b[6])<<8 | uint64(b[7])
}

// ç¼–è¯‘æ—¶æ£€æŸ¥æ¥å£å®ç°
var _ interfaces.InternalResourceQuery = (*Service)(nil)
