// Package resource æä¾›èµ„æºæŸ¥è¯¢æœåŠ¡çš„æµ‹è¯•
//
// ğŸ§ª **æµ‹è¯•æ–‡ä»¶**
//
// æœ¬æ–‡ä»¶æµ‹è¯• ResourceQuery æœåŠ¡çš„æ ¸å¿ƒåŠŸèƒ½ï¼Œéµå¾ªæµ‹è¯•è§„èŒƒï¼š
// - docs/system/standards/principles/testing-standards.md
//
// ğŸ¯ **æµ‹è¯•è¦†ç›–**ï¼š
// - æœåŠ¡åˆ›å»º
// - èµ„æºæŸ¥è¯¢
// - èµ„æºäº¤æ˜“ä¿¡æ¯æŸ¥è¯¢
// - æ–‡ä»¶è·¯å¾„æ„å»º
// - èµ„æºå“ˆå¸Œåˆ—è¡¨
package resource

import (
	"context"
	"encoding/json"
	"fmt"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	"github.com/weisyn/v1/internal/core/persistence/query/interfaces"
	"github.com/weisyn/v1/internal/core/persistence/testutil"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

type mockTxQuery struct {
	blockHash   []byte
	blockHeight uint64
}

func (m *mockTxQuery) GetTransaction(ctx context.Context, txHash []byte) (blockHash []byte, txIndex uint32, tx *transaction.Transaction, err error) {
	return m.blockHash, 0, &transaction.Transaction{}, nil
}
func (m *mockTxQuery) GetTxBlockHeight(ctx context.Context, txHash []byte) (uint64, error) {
	return m.blockHeight, nil
}
func (m *mockTxQuery) GetBlockTimestamp(ctx context.Context, height uint64) (int64, error) {
	return 0, nil
}
func (m *mockTxQuery) GetAccountNonce(ctx context.Context, address []byte) (uint64, error) {
	return 0, nil
}
func (m *mockTxQuery) GetTransactionsByBlock(ctx context.Context, blockHash []byte) ([]*transaction.Transaction, error) {
	return []*transaction.Transaction{}, nil
}

// ==================== æœåŠ¡åˆ›å»ºæµ‹è¯• ====================

// TestNewService_WithValidDependencies_ReturnsService æµ‹è¯•ä½¿ç”¨æœ‰æ•ˆä¾èµ–åˆ›å»ºæœåŠ¡
func TestNewService_WithValidDependencies_ReturnsService(t *testing.T) {
	// Arrange
	badgerStore := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	txQuery := &testutil.MockInternalTxQuery{}
	logger := testutil.NewTestLogger()

	// Act
	service, err := NewService(badgerStore, fileStore, txQuery, logger)

	// Assert
	assert.NoError(t, err)
	assert.NotNil(t, service)
}

// TestNewService_WithNilBadgerStore_ReturnsError æµ‹è¯•ä½¿ç”¨ nil badgerStore åˆ›å»ºæœåŠ¡
func TestNewService_WithNilBadgerStore_ReturnsError(t *testing.T) {
	// Arrange
	fileStore := testutil.NewTestFileStore()
	txQuery := &testutil.MockInternalTxQuery{}
	logger := testutil.NewTestLogger()

	// Act
	service, err := NewService(nil, fileStore, txQuery, logger)

	// Assert
	assert.Error(t, err)
	assert.Nil(t, service)
	assert.Contains(t, err.Error(), "badgerStore ä¸èƒ½ä¸ºç©º")
}

// ==================== èµ„æºäº¤æ˜“ä¿¡æ¯æŸ¥è¯¢æµ‹è¯• ====================

// TestGetResourceTransaction_WithValidContentHash_ReturnsTransactionInfo æµ‹è¯•è·å–èµ„æºäº¤æ˜“ä¿¡æ¯
func TestGetResourceTransaction_WithValidContentHash_ReturnsTransactionInfo(t *testing.T) {
	// Arrange
	ctx := context.Background()
	badgerStore := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	logger := testutil.NewTestLogger()
	contentHash := testutil.RandomHash()
	txHash := testutil.RandomHash()
	blockHash := testutil.RandomHash()
	blockHeight := uint64(100)

	txQuery := &mockTxQuery{blockHash: blockHash, blockHeight: blockHeight}
	service, err := NewService(badgerStore, fileStore, txQuery, logger)
	require.NoError(t, err)

	// Phase 4ï¼šèµ„æºäº¤æ˜“ä¿¡æ¯é€šè¿‡ codeâ†’instance ç´¢å¼•è·å–ï¼ˆindices:resource-code:{contentHash} = JSONæ•°ç»„ï¼‰
	instanceList := []string{fmt.Sprintf("%x:%d", txHash, 0)}
	indexData, err := json.Marshal(instanceList)
	require.NoError(t, err)
	txIndexKey := []byte(fmt.Sprintf("indices:resource-code:%x", contentHash))
	err = badgerStore.Set(ctx, txIndexKey, indexData)
	require.NoError(t, err)

	// Act
	resultTxHash, resultBlockHash, resultHeight, err := service.GetResourceTransaction(ctx, contentHash)

	// Assert
	assert.NoError(t, err)
	assert.Equal(t, txHash, resultTxHash)
	assert.Equal(t, blockHash, resultBlockHash)
	assert.Equal(t, blockHeight, resultHeight)
}

// ==================== æ–‡ä»¶è·¯å¾„æ„å»ºæµ‹è¯• ====================

// TestBuildFilePath_WithValidHash_ReturnsPath æµ‹è¯•æ„å»ºæ–‡ä»¶è·¯å¾„
func TestBuildFilePath_WithValidHash_ReturnsPath(t *testing.T) {
	// Arrange
	badgerStore := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	txQuery := &testutil.MockInternalTxQuery{}
	logger := testutil.NewTestLogger()
	service, err := NewService(badgerStore, fileStore, txQuery, logger)
	require.NoError(t, err)

	contentHash := testutil.RandomHash()

	// Act
	path := service.BuildFilePath(contentHash)

	// Assert
	assert.NotEmpty(t, path)
	assert.Contains(t, path, fmt.Sprintf("%x", contentHash))
}

// ==================== ç¼–è¯‘æ—¶æ£€æŸ¥ ====================

// ç¡®ä¿ Service å®ç°äº†æ¥å£
var _ interfaces.InternalResourceQuery = (*Service)(nil)
