package resourcesvc

import (
	"context"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// Service èµ„æºè§†å›¾æœåŠ¡æ¥å£ï¼ˆå¯¹å¤–å…¬å…±æ¥å£ï¼‰
//
// ğŸ¯ æ ¸å¿ƒèŒè´£ï¼š
// - æä¾›ç»Ÿä¸€çš„èµ„æºè§†å›¾æŸ¥è¯¢æœåŠ¡ï¼Œæ•´åˆ EUTXO å’Œ URES ä¸¤ä¸ªè§†è§’ã€‚
// - å¯¹å¤–æš´éœ²ç¨³å®šçš„æŸ¥è¯¢å¥‘çº¦ï¼Œä¾› API / SDK / å…¶ä»–æ¨¡å—ä½¿ç”¨ã€‚
type Service interface {
	// ListResources åˆ—å‡ºèµ„æºåˆ—è¡¨
	ListResources(ctx context.Context, filter ResourceViewFilter, page PageRequest) ([]*ResourceView, PageResponse, error)

	// GetResource è·å–å•ä¸ªèµ„æºï¼ˆåŸºäº ResourceCodeIdï¼‰
	// âš ï¸ æ³¨æ„ï¼šåœ¨å¤šå®ä¾‹åœºæ™¯ä¸‹ï¼Œæ­¤æ–¹æ³•å¯èƒ½è¿”å›é”™è¯¯æˆ–éœ€è¦è°ƒç”¨æ–¹æŒ‡å®šå®ä¾‹
	// æ¨èï¼šä¼˜å…ˆä½¿ç”¨ GetResourceByInstance è¿›è¡Œç²¾ç¡®æŸ¥è¯¢
	GetResource(ctx context.Context, contentHash []byte) (*ResourceView, error)

	// GetResourceByInstance æ ¹æ®èµ„æºå®ä¾‹æ ‡è¯†è·å–èµ„æºè§†å›¾
	// ä½¿ç”¨ ResourceInstanceIdï¼ˆOutPointï¼‰ä½œä¸ºä¸»é”®
	GetResourceByInstance(ctx context.Context, txHash []byte, outputIndex uint32) (*ResourceView, error)

	// ListResourceInstancesByCode åˆ—å‡ºæŒ‡å®šä»£ç çš„æ‰€æœ‰å®ä¾‹ï¼ˆ1:N æ˜ å°„ï¼‰
	ListResourceInstancesByCode(ctx context.Context, contentHash []byte) ([]*ResourceView, error)

	// GetResourceHistory è·å–èµ„æºå†å²
	GetResourceHistory(ctx context.Context, contentHash []byte, page PageRequest) (*ResourceHistory, error)
}

// ResourceView èµ„æºè§†å›¾ DTO
//
// ä¸ internal/core/resourcesvc/types.go ä¸­çš„å®šä¹‰ä¿æŒä¸€è‡´ï¼Œç”¨äºå¯¹å¤–æš´éœ²ç»Ÿä¸€è§†å›¾ã€‚
type ResourceView struct {
	// InstanceOutPoint èµ„æºå®ä¾‹æ ‡è¯†ï¼ˆResourceInstanceIdï¼Œä¸»é”®ï¼‰
	InstanceOutPoint *transaction.OutPoint

	// ContentHash èµ„æºå†…å®¹å“ˆå¸Œï¼ˆResourceCodeIdï¼‰
	ContentHash []byte

	// èµ„æºåˆ†ç±»
	Category       string // EXECUTABLE | STATIC
	ExecutableType string // CONTRACT | AI_MODEL | ...

	// èµ„æºå…ƒä¿¡æ¯
	MimeType string
	Size     uint64

	// UTXO è§†è§’
	OutPoint          *transaction.OutPoint
	Owner             []byte
	Status            string // ACTIVE | CONSUMED | EXPIRED
	CreationTimestamp uint64
	ExpiryTimestamp   *uint64
	IsImmutable       bool

	// é”å®šæ¡ä»¶ï¼ˆä» UTXO æŸ¥è¯¢è·å–ï¼‰
	LockingConditions []*transaction.LockingCondition

	// ä½¿ç”¨ç»Ÿè®¡
	CurrentReferenceCount uint64
	TotalReferenceTimes   uint64

	// åŒºå—ä¿¡æ¯
	DeployTxId        []byte
	DeployBlockHeight uint64
	DeployBlockHash   []byte
	DeployTimestamp   uint64

	// æ‰§è¡Œé…ç½®ï¼ˆä»…å¯æ‰§è¡Œèµ„æºï¼‰
	ExecutionConfig interface{} // *pbresource.Resource_Contract æˆ– *pbresource.Resource_Aimodel

	// æ–‡ä»¶ä¿¡æ¯
	OriginalFilename string
	FileExtension    string

	// åˆ›å»ºä¸Šä¸‹æ–‡å’Œäº¤æ˜“å…ƒæ•°æ®
	CreationContext string
	DeployMemo      string
	DeployTags      []string
}

// ResourceViewFilter èµ„æºè§†å›¾è¿‡æ»¤æ¡ä»¶
type ResourceViewFilter struct {
	Owner          []byte
	Category       *string
	ExecutableType *string
	Status         *string
	Tags           []string

	// ContentHash: æŒ‰ä»£ç è¿‡æ»¤ï¼ˆResourceCodeIdï¼‰ï¼Œè¿”å›è¯¥ä»£ç çš„æ‰€æœ‰å®ä¾‹
	// InstanceTxHash + InstanceOutputIndex: æŒ‰å®ä¾‹è¿‡æ»¤ï¼ˆResourceInstanceIdï¼‰ï¼Œç²¾ç¡®æŸ¥è¯¢
	ContentHash         []byte
	InstanceTxHash      []byte
	InstanceOutputIndex *uint32

	// GroupByCode: æ˜¯å¦æŒ‰ä»£ç èšåˆï¼ˆtrue = æ¯ä¸ªä»£ç åªè¿”å›ä¸€ä¸ªå®ä¾‹ï¼‰
	GroupByCode bool
}

// PageRequest åˆ†é¡µè¯·æ±‚
type PageRequest struct {
	Offset int
	Limit  int
}

// PageResponse åˆ†é¡µå“åº”
type PageResponse struct {
	Total  int
	Offset int
	Limit  int
}

// TxSummary äº¤æ˜“æ‘˜è¦
type TxSummary struct {
	TxId        []byte
	BlockHash   []byte
	BlockHeight uint64
	Timestamp   uint64
}

// ReferenceSummary å¼•ç”¨ç»Ÿè®¡æ‘˜è¦
type ReferenceSummary struct {
	TotalReferences   uint64
	UniqueCallers     uint64
	LastReferenceTime uint64
}

// ResourceHistory èµ„æºå†å²è®°å½•
type ResourceHistory struct {
	DeployTx          *TxSummary
	Upgrades          []*TxSummary
	References        []*TxSummary
	ReferencesSummary *ReferenceSummary
}
